--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -3,11 +3,12 @@
     <div class="hero-section">
       <div class="hero-content">
         <h1 class="hero-title">
-          Le bien-être de votre animal, </br>en un seul endroit        </h1>
+          Plateforme <span class="text-primary">santé</span> & <span class="text-primary">rendez-vous</span> animaliers
+        </h1>
         <p class="hero-subtitle">
           Trouvez et prenez rendez-vous en ligne instantanément avec les meilleurs professionnels animaliers.        </p>
         <div class="cta-buttons">
-          <a href="<%=professionals_path%>" class="btn btn-outline-primary text-black" aria-label="Prendre un rendez-vous">Je suis Propriétaire</a>
+          <a href="<%=explore_path%>" class="btn btn-outline-primary text-black" aria-label="Prendre un rendez-vous">Je suis Propriétaire</a>
           <a href="<%=pricings_path%>" class="btn btn-primary text-white" aria-label="Proposer un service">Je suis Pro</a>
         </div>
       </div>
@@ -17,22 +18,22 @@
     </div>
     <div class="search-section">
       <%= simple_form_for :search, url: professionals_path, method: :get do |f| %>
-      <div class="search-form-control form-group mb-3">
-        <div class="search-inputs-container w-form">
-          <%= text_field_tag :query,
+        <div class="search-form-control form-group mb-3">
+          <div class="search-inputs-container w-form">
+            <%= text_field_tag :query,
               params[:query],
               class: "form-control search-bar bg-white ps-5",
               placeholder: "Rechercher un service..."
           %>
-          <%= text_field_tag :query_address,
+            <%= text_field_tag :query_address,
               params[:query_address],
               class: "form-control search-bar bg-white ps-5",
               placeholder: "Ville..."
           %>
-          <%= submit_tag "Rechercher", class: "btn_custom search-bar ms-4" %>
+            <%= submit_tag "Rechercher", class: "btn_custom search-bar ms-4" %>
+          </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
     </div>
   </div>
 </div>
