--- a/app/views/pages/why_boop.html.erb
+++ b/app/views/pages/why_boop.html.erb
@@ -1,5 +1,5 @@
 <!-- filepath: app/views/pages/why_boop.html.erb -->
-<div class="why-boop-pro">
+<div class="why-boop">
   <!-- HERO -->
   <section class="wbp-hero">
     <div class="wbp-hero-content">
