--- a/app/views/pages/why_boop_pro.html.erb
+++ b/app/views/pages/why_boop_pro.html.erb
@@ -1,4 +1,4 @@
-<div class="why-boop-pro">
+<div class="why-boop">
   <section class="wbp-hero">
     <div class="wbp-hero-content">
       <h1>Attirez plus de clients et <br>
