--- a/app/assets/stylesheets/components/_about.scss
+++ b/app/assets/stylesheets/components/_about.scss
@@ -165,6 +165,7 @@
 
     .about-unique-list {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-around;
       gap: 40px;
       margin-top: 2rem;
@@ -173,6 +174,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 4rem;
 
         img {
           width: 80px;
@@ -183,6 +185,29 @@
           font-size: 1rem;
           max-width: 160px;
         }
+      }
+    }
+  }
+
+  &.about-links {
+    h2 {
+      text-align: center;
+      margin: 2rem;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+
+      a {
+        text-decoration: none;
+        color: #333;
+
+
       }
     }
   }
