--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,10 +12,10 @@
           <%= link_to "Accueil", root_path, class: "nav-link"%>
         </li>
         <li class="nav-item">
-          <%= link_to "Prendre un rendez-vous", professionals_path, class: "nav-link"%>
+          <%= link_to "Nos professionnels", explore_path, class: "nav-link"%>
         </li>
         <li class="nav-item">
-          <%= link_to "Proposer un service", pricings_path, class: "nav-link" %>
+          <%= link_to "Prix", pricings_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Adopter", animals_path, class: "nav-link" %>
@@ -23,7 +23,7 @@
         <li class="nav-item">
           <%= link_to "Pet Alert", pet_alerts_path, class: "nav-link" %>
         </li>
-        
+
         <% if user_signed_in? %>
 
           <li class="nav-item dropdown">
