--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="hero-image">
-        <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//ChatGPT_Image_4_juil._2025__21_41_52-removebg-preview.png", alt: "Vétérinaire examinant un chien dans sa clinique"%>
+        <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//home.webp", alt: "Vétérinaire examinant un chien dans sa clinique"%>
       </div>
     </div>
     <div class="search-section">
