--- a/app/views/pages/_benefices_section.html.erb
+++ b/app/views/pages/_benefices_section.html.erb
@@ -2,7 +2,7 @@
   <!-- Carte Professionnels -->
   <div class="position-relative card_pro d-flex flex-column justify-content-center align-items-center p-5" style="flex:1">
     <div class="badge-explosive">🎁 6 mois gratuits</div>
-    <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//pro-removebg-preview.png" alt="" class="image" />
+    <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//pro.webp" alt="Bénéfices pour les professionnels animaliers d'utiliser Boop" class="image" />
     <h3 class="my-2">Pour les professionnels</h3>
     <p  class="my-2">
       Gérez vos disponibilités et obtenez de nouveaux clients facilement
@@ -18,7 +18,7 @@
   <!-- Carte Propriétaires -->
   <div class="position-relative card_pro d-flex flex-column justify-content-center align-items-center p-5" style="flex:1">
     <div class="badge-gratuit">🎉 Tout est gratuit</div>
-    <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//proprietaire.png" alt="" class="image"/>
+    <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//proprietaire.webp" alt="Bénéfices pour les propriétaires des animaux d'utiliser Boop" class="image"/>
     <h3 class="my-2">Pour les propriétaires d’animaux</h3>
     <p  class="my-2">
       Réservez un service et trouvez les meilleurs professionnels autour de vous
