--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -74,7 +74,7 @@
       <h2 class="about-script">Découvrez Boop en vidéo </h2>
     </div>
     <div class="about-invite-img">
-      <video class="about-video" controls poster="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//presentation-boop-thumnail.webp">
+      <video class="about-video" controls poster="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//presentation-boop-thumnail.webp" alt="comment fonctionne boop?">
         <source src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/presentation-boop.webm" type="video/webm">
         Votre navigateur ne supporte pas la vidéo.
       </video>
