--- a/app/views/pricings/index.html.erb
+++ b/app/views/pricings/index.html.erb
@@ -5,7 +5,7 @@
       <p class="m-3">
         Trouvez le programme idéal et bénéficiez de
         <span class="text-primary" style="font-weight:bold; font-size:x-large">
-          30 jours d'essai gratuit
+          6 mois d'essai gratuit
         </span>
         pour en profiter pleinement ! 🚀
       </p>
