--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="footer-container">
     <div class="footer-left">
       <%= link_to root_path do %>
-      <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Boop%20-%20LOGO%20FINAL%20RVB.png", style: "width: 100px;" %>
+      <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//boop-logo-100x68.webp", style: "width: 100px;", alt: "Boop - trouver un professionnel animalier proche de chez vous" %>
       <% end %>
       <p class="footer-slogan">Le bien-être de votre animal, en un seul endroit.</p>
     </div>
