--- a/app/views/animals/_banner.html.erb
+++ b/app/views/animals/_banner.html.erb
@@ -16,7 +16,7 @@
       <div class="hero-image-wrapper">
         <div class="hero-image">
           <%= image_tag "https://images.unsplash.com/photo-1589883661923-6476cb0ae9f2?q=80&w=2574&auto=format&fit=crop",
-              alt: "Happy dog looking up" %>
+              alt: "Animaux à adopter" %>
         </div>
       </div>
     </div>
