--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,10 +38,10 @@
     </script>
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <%= javascript_include_tag "https://js.stripe.com/v3/" %>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" fetchpriotiry="low"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js" fetchpriotiry="low"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js" fetchpriotiry="low"></script>
+    <%= javascript_include_tag "https://js.stripe.com/v3/"%>
     <div class="page-container">
       <%= render "shared/navbar" %>
       <div class="page-wrapper">
