--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -18,6 +18,7 @@
               <%= link_to 'Créer un carnet de santé numérique', new_user_session_path, class: 'footer-link' %>
             <% end %>
           </li>
+          <li><%= link_to 'Comment ça marche ?', why_boop_path, class: 'footer-link' %></li>
           <li><%= link_to 'Trouver un pro', explore_path, class: 'footer-link' %></li>
           <li><%= link_to 'FAQ', "#{why_boop_pro_path}#faq", class: 'footer-link' %></li>
         </ul>
