--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
         ]
       }
     </script>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" fetchpriotiry="low"></script>
