--- a/app/views/professionals/_setting_sideBar.html.erb
+++ b/app/views/professionals/_setting_sideBar.html.erb
@@ -7,7 +7,7 @@
     <div class="d-flex flex-column align-items-center">
       <a href="<%=edit_professional_path(professional)%>" class="setting_button">✏️ Modifier mon profil pro</a>
       <a href="<%=professional_edit_availibilities_path(professional)%>" class="setting_button my-5">🗓️ Gérer mes créneaux</a>
-      <a href="#" class="setting_button" data-controller="alert" data-action="click -> alert#shareLink" data-professional-id="<%= professional.id %>">🔗 Partager le lien</a>
+      <a href="#" class="setting_button" data-controller="alert" data-action="click -> alert#shareLink" data-professional-id="<%= professional.id %>" data-professional-name="<%= professional.name %>">🔗 Partager le lien</a>
     </div>
   </div>
 </div>
