--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -42,7 +42,7 @@
           <div class="card_pro_index">
             <div class="card_pro grid-index align-items-start">
               <div>
-                <a href="<%=professional_show_path(professional.id, professional.name)%>" class="text-decoration-none text-black mx-auto" style="width: 100%;">
+                <a href="<%=show_professional_path(professional.id, professional.name)%>" class="text-decoration-none text-black mx-auto" style="width: 100%;">
                   <div class="position-relative">
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                       <div class="carousel-inner">
